--- a/iletisim.html
+++ b/iletisim.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>İletişim</title>
     <link rel="stylesheet" href="style.css">
-
-
-    </head>
-    <body>
-        <h1>Hello World v2</h1>
-        <a href="iletisim.html">İletişim</a>
-        
-        
-    </body>
-</html>
+</head>
+<body>
+    <h1>İletişim Sayfası</h1>
+    <p>Bize ulaşın!</p>
+    <a href="index.html">Ana Sayfa'ya dön</a>
+</body>
+</html> 
