--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
 
     </head>
     <body>
         <h1>Hello World v2</h1>
         <a href="iletisim.html">İletişim</a>
+        <button id="download-pdf">Download as PDF</button>
         
-        
+        <script src="script.js"></script>
     </body>
 </html>
