--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Hello World v2</h1>
         <a href="iletisim.html">İletişim</a>
-        <button id="download-pdf">Download as PDF</button>
+        <button id="download-pdf">Dowsnload as PDF</button>
         
         <script src="script.js"></script>
     </body>
